<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blurry_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="@dimen/_100sdp"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            android:drawablePadding="@dimen/_6sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/kleine"
            />

        <TextView
            android:id="@+id/tvLetsLoginLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="@dimen/_45sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            android:text="@string/letsLogIn"
            android:textAlignment="center"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLoginLogin"
            android:text="@string/dontHaveAnAccount"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <EditText
            android:id="@+id/edEmailLogin"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/tvDontHaveAccount"
            style="@style/editText"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_50sdp"
            />

        <EditText
            android:id="@+id/edPasswordLogin"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/edEmailLogin"
            style="@style/editText"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/edPasswordLogin"
            android:text="@string/forgotPassword"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonLoginLogin"
            style="@style/blueButtonStyle"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/login_btn"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLogin"
            app:spinning_bar_color="@color/white"

            />

        <ImageView
            android:id="@+id/facebookLoginLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin"
            android:src="@drawable/ic_facebook_login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_facebook"
            app:layout_constraintStart_toStartOf="@id/facebookLoginLogin"
            app:layout_constraintTop_toTopOf="@id/facebookLoginLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLoginLogin"
            app:layout_constraintBottom_toBottomOf="@id/facebookLoginLogin"
            />

        <ImageView
            android:id="@+id/googleLoginLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin"
            android:src="@drawable/ic_google_login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_google"
            app:layout_constraintStart_toStartOf="@id/googleLoginLogin"
            app:layout_constraintTop_toTopOf="@id/googleLoginLogin"
            app:layout_constraintEnd_toEndOf="@id/googleLoginLogin"
            app:layout_constraintBottom_toBottomOf="@id/googleLoginLogin"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>