<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/blurry_background"
        android:scaleType="centerCrop"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="@dimen/_100sdp"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            android:drawablePadding="@dimen/_6sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/kleine"
            />

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="@dimen/_45sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
            android:text="@string/quality"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/blueButtonStyle"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/tvQuality"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register_btn"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            android:layout_marginTop="@dimen/_15sdp"
            style="@style/whiteButtonStyle"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            android:text="@string/login_btn"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

