<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/resetPassword"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvResetPasswordText"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/weWillSendYouPasswordLink"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edResetPassword"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:hint="@string/resetPassword"
        app:layout_constraintStart_toStartOf="@id/tvResetPasswordText"
        app:layout_constraintTop_toBottomOf="@id/tvResetPasswordText"
        app:layout_constraintEnd_toEndOf="@id/tvResetPasswordText"
        />

    <LinearLayout
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@id/edResetPassword"
        app:layout_constraintTop_toBottomOf="@id/edResetPassword"
        app:layout_constraintEnd_toEndOf="@id/edResetPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/white_background"
            android:text="@string/cancel"
            android:textAllCaps="false"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSendResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/blue_background"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>